change the start up parameters